# nox

./: .gitignore  Cargo.toml  OPERATIONS_MANUAL.md  README.md  README_AGENT_SELECTOR.md  TECHNICAL_ARCHITECTURE.md  TESTING_STRATEGY.md  TEST_PLAN.md  WEBSOCKET_IMPROVEMENTS.md  bug_fix_verification.md  eslint.config.js  jest.config.js  package-lock.json  package.json  refactor.md  scrolling_test_verification.md  test_news_agent.sh  test_predefined_agents.md  todo.md  tsconfig.json
.nox-registry/: agents.json  agents.toml
.nox-registry/tasks/: 093b74a0-4612-4450-b6db-34834da06035.json  139a794c-330a-4740-85fd-78e94a163f86.json  1e45892f-0c47-4337-b0e5-3555e8ea5575.json  30627dba-5b4b-44b2-a9e6-343915b69cc4.json  3d2f1d83-a009-4222-a35a-299875baf1c1.json  40bf0d46-53e4-415c-8dc6-3aa0d5256257.json  4c27028a-2833-4f06-ac63-60ed0c971396.json  568cbdd0-7d12-4372-a501-fb3b973feedd.json  6b331d37-d652-4e79-82f4-ab2e67670d6f.json  73b9148b-e7ef-4e0d-b544-be135eb2e82d.json  7910a08d-1742-4563-a657-bf1f9f37423c.json  a0085525-06de-47b0-97c3-95afdd320b70.json  a4ef639b-43a3-4287-98f9-8a15e326fab1.json  e7e060d7-cce2-4b7d-9216-a24dc151c6aa.json  task-102316954496741946177221339238164072926.json  task-103085368803684198205113455628795136644.json  task-103371312914050874402516339869291549318.json  task-104090366551551185541616732713103378999.json  task-107592123575888216256161956556540077184.json  task-107850288176391780105369697783482979677.json  task-109386579823930219563906444217151959594.json  task-111349526013397332252299295729866955680.json  task-111589662335849231724388245215570047124.json  task-111743402950111835036628741975303723888.json  task-111769621377866132263854416920259895604.json  task-112557427303888362380222079359966734623.json  (+235 more)
config/: default.toml  predefined_agents.yaml
coverage/: index.html  lcov.info
docs/: API_SPECIFICATION.md  CLAUDE_CLI_TEST_RESULTS.md  CLI_REFERENCE.md  DOCUMENTATION_UPDATE_SUMMARY.md  EXECUTION_SCREEN_KEY_HANDLING_FIX.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  MANUAL.md  OPERATIONS_MANUAL.md  PROJECT_STRUCTURE.md  README_PITFALLS.md  README_UPDATES.md  RECENT_UPDATES.md  RUNNING_TASKS_NAVIGATION_FIX.md  TASK_EXECUTION_CHANGES.md  TEST_PLAN.md  enhanced_testing_framework.md  features.md  keyboard_shortcuts_reference.md  keys_plan.md  nox_crud_test_report_20250718_052903.md  nox_tui_test_report_20250718_051704.md  nox_tui_test_report_20250718_052108.md  react-ui-plan.md  testing_fw.md  todo.md  tui-testing.md  tui.md
docs_rust/: API_SPECIFICATION.md  CLI_REFERENCE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  MANUAL.md  PROJECT_STRUCTURE.md  RECENT_UPDATES.md  TECHNICAL_ARCHITECTURE.md  TESTING_STRATEGY.md
e2e/: console.spec.ts
examples/: test_task_cancellation.rs  test_task_execution.rs
frontend/: package-lock.json  package.json
frontend/src/: App.css  (+4 more)
messages/: message-history.json
metrics/: system-metrics.json
scripts/: README.md  build.sh  deploy-docker.sh  deploy.sh  dev.sh  monitor-agents.js  run-dev.sh  run-full-test.sh  run-prod.sh  run.sh  start-agent-session.js  test-agent-tasks.js  test-agents.js  test-cleanup-and-setup.js  test-direct-message.js  test-task-execution.js
src/: lib.rs  main.rs  nox.ts  testing_fw.rs  testing_fw_extended.rs
tasks/: agent-1752393020978.md  agent-1752398137021.md  agent-1752398497053.md  test-agent-001.md
test_logs/: fixed_test.md
tests/: api_tests.rs  registry_manager_tests.rs  setup.ts
(+256 files in other folders)
