[package]
name = "nox"
version = "0.1.0"
edition = "2021"
authors = ["Nox Team"]
description = "Autonomous AI Agent Ecosystem"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
git2 = "0.17"
uuid = { version = "1.4", features = ["v4", "serde"] }
config = "0.13"
log = "0.4"
env_logger = "0.10"
actix-web = "4.3"
actix-rt = "2.8"
actix-cors = "0.6"
actix-ws = "0.2"
markdown = "0.3"
futures = "0.3"
async-trait = "0.1"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.5"
